@@ -1,3 +1,8 @@
+2017-07-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+	    Sudakshina Das  <sudi.das@arm.com>
+
+	* gcc.target/aarch64/tst_imm_split_1.c: New Test.
+
 2017-07-27  Marek Polacek  <polacek@redhat.com>
 
 	PR c/81417
